// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Watch mode flows Runs Jest once by default and shows usage 1`] = `
Array [
  "
Watch Usage
 › Press a to run all tests.
 › Press p to filter by a filename regex pattern.
 › Press t to filter by a test name regex pattern.
 › Press q to quit watch mode.
 › Press Enter to trigger a test run.
",
]
`;

exports[`Watch mode flows shows prompts for WatchPlugins in alphabetical order 1`] = `
Array [
  Array [
    "
Watch Usage
 › Press a to run all tests.
 › Press p to filter by a filename regex pattern.
 › Press t to filter by a test name regex pattern.
 › Press s to do nothing.
 › Press u to do something else.
 › Press q to quit watch mode.
 › Press Enter to trigger a test run.
",
  ],
]
`;
